--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
     />
     <meta
       property="og:image"
-      content="https://koinica.com/assets/images/favicon.ico"
+      content="https://angry-goldberg-867093.netlify.app/assets/images/favicon.ico"
     />
-    <meta property="og:url" content="https://justtada.com/" />
+    <meta
+      property="og:url"
+      content="https://angry-goldberg-867093.netlify.app/"
+    />
     <meta name="twitter:card" content="summary_large_image" />
 
     <!--  Non-Essential, But Recommended -->
