--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@
           "A life spent making mistakes is not only more honorable, but more useful than a life spent doing nothing.",
           "You do not write your life with words... You write it with actions. What you think is not important. It is only important what you do",
           "Yesterday I was clever, so I wanted to change the world. Today I am wise, so I am changing myself.",
-          "Let no man pull you so low as to hate him.",
+          "When life is too easy for us, we must beware or we may not be ready to meet the blows which sooner or later come to everyone, rich or poor.",
           "The simple things are also the most extraordinary things, and only the wise can see them.",
         ];
         const imgs = ["assets/images/hero.png", "assets/images/hero2.png"];
