--- a/index.html
+++ b/index.html
@@ -969,6 +969,7 @@
             <script>
               document.write(new Date().getFullYear());
             </script>
+            BlabEmo.
           </p>
         </div>
       </div>
