--- a/business-details.html
+++ b/business-details.html
@@ -75,10 +75,10 @@
         </a>
 
         <ul class="navigation">
-          <a href="#"><li>Timeline</li></a>
+          <a href="timeline.html"><li>Timeline</li></a>
           <a href="#"><li>Peer Review</li></a>
-          <a href="#"><li>Login</li></a>
-          <a href="#"><li class="signup">SignUp</li></a>
+          <a href="login.html"><li>Login</li></a>
+          <a href="signup.html"><li class="signup">SignUp</li></a>
         </ul>
 
         <div class="menu-icon">
@@ -220,9 +220,7 @@
                           <p>Indifferent</p>
                         </label>
                       </li>
-                      <li>
-                        <h3 id="rating">0.0</h3>
-                      </li>
+                      <li id="rating">0.0</li>
                     </ul>
                   </div>
 
@@ -232,7 +230,7 @@
                         <div class="review-tag">
                           <label class="checkbox"
                             >Sexual Assault
-                            <input name="" type="checkbox" value="" />
+                            <input name="tag" type="radio" value="" />
                             <span class="checkmark"></span>
                           </label>
                           <p>
@@ -246,7 +244,7 @@
                         <div class="review-tag">
                           <label class="checkbox"
                             >Nepotism
-                            <input name="" type="checkbox" value="" />
+                            <input name="tag" type="radio" value="" />
                             <span class="checkmark"></span>
                           </label>
                           <p>
@@ -260,7 +258,7 @@
                         <div class="review-tag">
                           <label class="checkbox"
                             >Racism
-                            <input name="" type="checkbox" value="" />
+                            <input name="tag" type="radio" value="" />
                             <span class="checkmark"></span>
                           </label>
                           <p>
@@ -274,7 +272,7 @@
                         <div class="review-tag">
                           <label class="checkbox"
                             >Racism
-                            <input name="" type="checkbox" value="" />
+                            <input name="tag" type="radio" value="" />
                             <span class="checkmark"></span>
                           </label>
                           <p>
@@ -288,7 +286,7 @@
                         <div class="review-tag">
                           <label class="checkbox"
                             >Sexual Assault
-                            <input name="" type="checkbox" value="" />
+                            <input name="tag" type="radio" value="" />
                             <span class="checkmark"></span>
                           </label>
                           <p>
@@ -302,7 +300,7 @@
                         <div class="review-tag">
                           <label class="checkbox"
                             >Nepotism
-                            <input name="" type="checkbox" value="" />
+                            <input name="tag" type="radio" value="" />
                             <span class="checkmark"></span>
                           </label>
                           <p>
@@ -602,6 +600,20 @@
                 id=""
                 placeholder="Proof of Address (HQ)"
               />
+              <div class="payment-option">
+                <h6>Payment Option</h6>
+                <label class="checkbox"
+                  >PO
+                  <input name="paymentOption" type="radio" value="" />
+                  <span class="checkmark"></span>
+                </label>
+                <label class="checkbox"
+                  >Card
+                  <input name="paymentOption" type="radio" value="" />
+                  <span class="checkmark"></span>
+                </label>
+              </div>
+              <input type="text" name="" id="" placeholder="Payment detail" />
               <button type="button" class="submit-btn">Submit Claim</button>
             </form>
           </div>
@@ -621,6 +633,25 @@
         $(".input-rating .icon").removeClass("show");
         $(".star" + val + " .icon").addClass("show");
         $("#rating").text(val + ".0");
+      });
+
+      $(".star1").mouseover(function () {
+        $("#rating").text("1.0");
+      });
+      $(".star2").mouseover(function () {
+        $("#rating").text("2.0");
+      });
+      $(".star3").mouseover(function () {
+        $("#rating").text("3.0");
+      });
+      $(".star4").mouseover(function () {
+        $("#rating").text("4.0");
+      });
+      $(".star5").mouseover(function () {
+        $("#rating").text("5.0");
+      });
+      $(".star1, .star2, .star3, .star4, .star5").mouseleave(function () {
+        $("#rating").text("0.0");
       });
     </script>
   </body>
