--- a/business-list.html
+++ b/business-list.html
@@ -75,10 +75,10 @@
         </a>
 
         <ul class="navigation">
-          <a href="#"><li>Timeline</li></a>
+          <a href="timeline.html"><li>Timeline</li></a>
           <a href="#"><li>Peer Review</li></a>
-          <a href="#"><li>Login</li></a>
-          <a href="#"><li class="signup">SignUp</li></a>
+          <a href="login.html"><li>Login</li></a>
+          <a href="signup.html"><li class="signup">SignUp</li></a>
         </ul>
 
         <div class="menu-icon">
