Milestone 2 corrections done

--- a/business-details.html
+++ b/business-details.html
@@ -361,6 +361,24 @@
                     <h6>OR</h6>
                     <input type="email" placeholder="Email" />
                     <input type="password" placeholder="Password" />
+                    <label class="checkbox"
+                      >I agree to BlabEmo
+                      <a
+                        href=""
+                        data-bs-toggle="modal"
+                        data-bs-target="#termsOfUseModal"
+                        >Terms of Service</a
+                      >
+                      and
+                      <a
+                        href=""
+                        data-bs-toggle="modal"
+                        data-bs-target="#privacyPolicyModal"
+                        >Privacy Policy</a
+                      >
+                      <input name="consent" type="checkbox" value="" />
+                      <span class="checkmark"></span>
+                    </label>
                   </div>
 
                   <button type="button" class="submit-btn">Post Review</button>
@@ -561,7 +579,7 @@
       </div>
     </div>
 
-    <!-- Modal -->
+    <!-- Cookie Modal -->
     <div
       class="modal fade"
       id="cookiePolicyModal"
@@ -682,7 +700,7 @@
       </div>
     </div>
 
-    <!-- Modal -->
+    <!-- Claim Business Modal -->
     <div
       class="modal fade"
       id="claimBusinessModal"
@@ -744,6 +762,248 @@
               <input type="text" name="" id="" placeholder="Payment detail" />
               <button type="button" class="submit-btn">Submit Claim</button>
             </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Terms of use Modal -->
+    <div
+      class="modal fade"
+      id="termsOfUseModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          ></button>
+          <div class="modal-body">
+            <h5 class="header">Terms of Service</h5>
+            <div class="terms">
+              <h3>Collection of Information</h3>
+              <p>
+                The services that connect lorem ipsum our firm is a long
+                established fact that a reader will be distracted by the
+                readable of a page when looking at its layout the point of using
+                lorem ipsum is that it has a more orless normal distribution of
+                letters as opposed to using content here making it lookOur firm
+                is a long established fact that a reader will be distracted by
+                the readable of a page when looking at its layout the point of
+                using lorem ipsum is that it has a more orless normal
+                distribution of letters as opposed to using content here making
+                it look the point of using lorem ipsum is that it has a more
+                orless normal distribution of letters as opposed to using
+                content here making it lookOur firm is a long lorem ipsum is
+                that it has a more orless normal distribution of letters as
+                opposed to using content here making it lookOur firm is a long
+                established fact that a reader will be distracted by the
+                readable of a page
+              </p>
+              <p>
+                Lorem ipsum our firm is a long established fact that a reader
+                will be distracted by the readable of a page when looking at its
+                layout the point of using lorem ipsum is that it has a more
+                orless normal distribution of letters as opposed to using
+                content here making it lookOur firm is a long established fact
+                that a reader will be distracted by the readable of a page when
+                looking.
+              </p>
+            </div>
+
+            <div class="terms">
+              <h3>How We Use Information</h3>
+              <p>
+                <span>A. Responsibility for Your Content.</span>
+                lorem ipsum our firm is a long established fact that a reader
+                will be distracted by the readable of a page when looking at its
+                layout the point of using lorem ipsum is that it has a more
+                orless normal distribution of letters as opposed to using
+                content here making it lookOur firm is a long established fact
+                that a reader will be distracted by the readable of a page when
+                looking at its layout the.
+              </p>
+              <p>
+                <span>B. Responsibility for Your Content.</span>
+                lorem ipsum our firm is a long established fact that a reader
+                will be distracted by the readable of a page when looking at its
+                layout the point of using lorem ipsum is that it has a more
+                orless normal distribution of letters as opposed to using
+                content here making it look our firm is a long established fact
+                that a reader will be distracted by the readable of a page when
+                looking at its layout the.
+              </p>
+            </div>
+
+            <div class="terms">
+              <h3>How We Share Information</h3>
+              <p>
+                The services that connect lorem ipsum our firm is a long
+                established fact that a reader will be distracted by the
+                readable of a page when looking at its layout the point of using
+                lorem ipsum is that it has a more orless normal distribution of
+                letters as opposed to using content here making it lookOur firm
+                is a long established fact that a reader will be distracted by
+                the readable of a page when looking at its layout the point of
+                using lorem ipsum is that it has a more or less normal
+                distribution of letters as opposed to using content here making
+                it look the point of using lorem ipsum is that it has a more
+                orless normal distribution of letters as opposed to using
+                content here making it look our firm is a long lorem ipsum is
+                that it has a more orless normal distribution of letters as
+                opposed to using content here making it look our firm is a long
+                established fact that a reader will be distracted by the
+                readable of a page
+              </p>
+            </div>
+
+            <div class="terms">
+              <h3>Cookies and Trackers</h3>
+              <p>
+                The services that connect lorem ipsum our firm is a long
+                established fact that a reader will be distracted by the
+                readable of a page when looking at its layout the point of using
+                lorem ipsum is that it has a more orless normal distribution of
+                letters as opposed to using content here making it look our firm
+                is a long established fact that a reader will be distracted by
+                the readable of a page when looking at its layout the point of
+                using lorem ipsum is that it has a more or less normal
+                distribution of letters as opposed to using content here making
+                it look the point of using lorem ipsum is that it has a more
+                orless normal distribution of letters as opposed to using
+                content here making it look our firm is a long lorem ipsum is
+                that it has a more or less normal distribution of letters as
+                opposed to using content here making it look our firm is a long
+                established fact that a reader will be distracted by the
+                readable of a page
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Privacy Policy Modal -->
+    <div
+      class="modal fade"
+      id="privacyPolicyModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content">
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="modal"
+            aria-label="Close"
+          ></button>
+          <div class="modal-body">
+            <h5 class="header">Privacy Policy</h5>
+            <div class="terms">
+              <h3>Collection of Information</h3>
+              <p>
+                The services that connect lorem ipsum our firm is a long
+                established fact that a reader will be distracted by the
+                readable of a page when looking at its layout the point of using
+                lorem ipsum is that it has a more orless normal distribution of
+                letters as opposed to using content here making it lookOur firm
+                is a long established fact that a reader will be distracted by
+                the readable of a page when looking at its layout the point of
+                using lorem ipsum is that it has a more orless normal
+                distribution of letters as opposed to using content here making
+                it look the point of using lorem ipsum is that it has a more
+                orless normal distribution of letters as opposed to using
+                content here making it lookOur firm is a long lorem ipsum is
+                that it has a more orless normal distribution of letters as
+                opposed to using content here making it lookOur firm is a long
+                established fact that a reader will be distracted by the
+                readable of a page
+              </p>
+              <p>
+                Lorem ipsum our firm is a long established fact that a reader
+                will be distracted by the readable of a page when looking at its
+                layout the point of using lorem ipsum is that it has a more
+                orless normal distribution of letters as opposed to using
+                content here making it lookOur firm is a long established fact
+                that a reader will be distracted by the readable of a page when
+                looking.
+              </p>
+            </div>
+
+            <div class="terms">
+              <h3>How We Use Information</h3>
+              <p>
+                <span>A. Responsibility for Your Content.</span>
+                lorem ipsum our firm is a long established fact that a reader
+                will be distracted by the readable of a page when looking at its
+                layout the point of using lorem ipsum is that it has a more
+                orless normal distribution of letters as opposed to using
+                content here making it lookOur firm is a long established fact
+                that a reader will be distracted by the readable of a page when
+                looking at its layout the.
+              </p>
+              <p>
+                <span>B. Responsibility for Your Content.</span>
+                lorem ipsum our firm is a long established fact that a reader
+                will be distracted by the readable of a page when looking at its
+                layout the point of using lorem ipsum is that it has a more
+                orless normal distribution of letters as opposed to using
+                content here making it look our firm is a long established fact
+                that a reader will be distracted by the readable of a page when
+                looking at its layout the.
+              </p>
+            </div>
+
+            <div class="terms">
+              <h3>How We Share Information</h3>
+              <p>
+                The services that connect lorem ipsum our firm is a long
+                established fact that a reader will be distracted by the
+                readable of a page when looking at its layout the point of using
+                lorem ipsum is that it has a more orless normal distribution of
+                letters as opposed to using content here making it lookOur firm
+                is a long established fact that a reader will be distracted by
+                the readable of a page when looking at its layout the point of
+                using lorem ipsum is that it has a more or less normal
+                distribution of letters as opposed to using content here making
+                it look the point of using lorem ipsum is that it has a more
+                orless normal distribution of letters as opposed to using
+                content here making it look our firm is a long lorem ipsum is
+                that it has a more orless normal distribution of letters as
+                opposed to using content here making it look our firm is a long
+                established fact that a reader will be distracted by the
+                readable of a page
+              </p>
+            </div>
+
+            <div class="terms">
+              <h3>Cookies and Trackers</h3>
+              <p>
+                The services that connect lorem ipsum our firm is a long
+                established fact that a reader will be distracted by the
+                readable of a page when looking at its layout the point of using
+                lorem ipsum is that it has a more orless normal distribution of
+                letters as opposed to using content here making it look our firm
+                is a long established fact that a reader will be distracted by
+                the readable of a page when looking at its layout the point of
+                using lorem ipsum is that it has a more or less normal
+                distribution of letters as opposed to using content here making
+                it look the point of using lorem ipsum is that it has a more
+                orless normal distribution of letters as opposed to using
+                content here making it look our firm is a long lorem ipsum is
+                that it has a more or less normal distribution of letters as
+                opposed to using content here making it look our firm is a long
+                established fact that a reader will be distracted by the
+                readable of a page
+              </p>
+            </div>
           </div>
         </div>
       </div>
