--- a/contact.html
+++ b/contact.html
@@ -155,6 +155,7 @@
                   ><i class="fab fa-twitter-square"></i
                 ></a>
                 <a href="https://"><i class="fab fa-linkedin"></i></a>
+                <a href="https://"><i class="fab fa-instagram-square"></i></a>
               </li>
             </ul>
           </div>
